--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
-    <title>ActiveReports</title>
+    <title>ActiveReports Designer App</title>
 
     <!-- <link
       rel="stylesheet"
